--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "cookie": "^1.0.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "14.2.15",
