--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
