--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,41 @@
 asgiref==3.8.1
+attrs==25.1.0
+autobahn==24.4.2
+Automat==24.8.1
+boto3==1.36.16
+botocore==1.36.16
+cffi==1.17.1
 channels==4.2.0
+constantly==23.10.4
+cryptography==44.0.0
 daphne==4.1.2
 Django==5.1.2
 django-cors-headers==4.4.0
-django-environ==0.11.2
+django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+jmespath==1.0.1
 pillow==10.4.0
+psycopg2==2.9.10
 psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==25.0.0
+python-dateutil==2.9.0.post0
+s3transfer==0.11.2
+service-identity==24.2.0
+setuptools==75.8.0
+six==1.17.0
 sqlparse==0.5.1
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.3.0
+whitenoise==6.9.0
+zope.interface==7.2
