Make powerless of the middleware and update others

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,5 +1,10 @@
 # API Configuration
-NEXT_PUBLIC_BACKEND_API_BASE_URL = http://16.170.155.133
-NEXT_PUBLIC_BACKEND_SOCKET_BASE_URL = ws://16.170.155.133/ws
+# NEXT_PUBLIC_BACKEND_API_BASE_URL = http://16.170.155.133
+# NEXT_PUBLIC_BACKEND_SOCKET_BASE_URL = ws://16.170.155.133/ws
 
 NEXT_PUBLIC_NODE_ENV = development 
+
+
+# Development
+NEXT_PUBLIC_BACKEND_API_BASE_URL = http://localhost:8000
+NEXT_PUBLIC_BACKEND_SOCKET_BASE_URL = ws://localhost:8000/ws
