--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,14 +11,20 @@ cryptography==44.0.0
 daphne==4.1.2
 Django==5.1.2
 django-cors-headers==4.4.0
+django-environ==0.11.2
+django-simple-history==3.8.0
 django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 jmespath==1.0.1
 pillow==10.4.0
+priority==1.3.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.9
 pyasn1==0.6.1
