Update the README.md file

--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,3 +1,6 @@
+# Replace with your actual credentials or keep some of it as it is, if the credentials are exactly similar 
+# that are mentioned in the documentation(README.md file)
+
 DEBUG=1
 SECRET_KEY=PlaceSecretKeyHere
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
@@ -8,5 +11,7 @@ SQL_PASSWORD=tmpdbpassword
 SQL_HOST=localhost
 SQL_PORT=5432
 
+
+# Replace these two variables value with your actual credentials
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=email_app_password/email_password
